# jade-agents-cli

./: .dockerignore  .gitignore  .mcp.json  .mise.toml  CLAUDE.md  Dockerfile  Makefile  README.md  bunfig.toml  docker-compose.yml  drizzle.config.ts  env.template  package.json  pyproject.toml  tsconfig.json  vercel.json  wrangler.toml
.claude/: settings.json
.claude/agents/: code-quality-reviewer.md  security-reviewer.md  test-coverage-reviewer.md
.claude/commands/: commit-push-pr.md  review-pr.md  simplify.md  tdd-green.md  tdd-red.md  verify.md
.claude/hooks/: post-edit-format.sh  session-start-cloud-status.sh
.claude/rules/: mcp.md  python.md  typescript.md
.github/: PULL_REQUEST.md  SECRETS.md  SESSION_PROMPTS.md  dependabot.yml
.github/workflows/: ci.yml  claude.yml  cloudflare-deploy.yml  neon-branch.yml  preview.yml
api/: graph.ts  health.ts
artifacts/2026-02-24/: how-to-think-before-you-build.md  jade-architecture-scaffold.md
journal/2026-02-24/: 001-day-one-foundations.md  001a-container-network-constraints.md  002-compaction-and-personality-persistence.md  002-compaction-mechanics.md  human-perspective-day-one.md
meta/: how-we-journal.md
prompts/2026-02-24/: session-001-prompts.md
scripts/: jade-sync.sh
src/jade/: __init__.py  settings.py
templates/: decision-entry.md
tests/: conftest.py  test_settings.py
tests/agent/: test_jade_agent.py
tests/mcp/: test_entities.py  test_jade_server.py  test_memory_server.py
ts/: settings.ts
web/: PRD.md  WIREFRAMES.md  jadecli-labs-jade-agents-cli-PRD.md  package.json
worker/: index.ts
(+92 files in other folders)
